k8s/base/api-deployment.yml
# k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-api
  template:
    metadata:
      labels:
        app: portfolio-api
    spec:
      imagePullSecrets: 
        - name: ghcr-secret
      containers:
        - name: portfolio-api
          image: ghcr.io/aayzstha37/personal-portfolio/api:latest 
          imagePullPolicy: Always 
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-api-service # The name our UI will use to connect
spec:
  selector:
    app: portfolio-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
