k8s/base/ui-deployment.yml
# k8s/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-ui
  template:
    metadata:
      labels:
        app: portfolio-ui
    spec:
      containers:
        - name: portfolio-ui
          image: ghcr.io/aayzstha37/personal-portfolio/ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-ui-service
spec:
  selector:
    app: portfolio-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
