k8s/base/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress-service
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-ui-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: portfolio-api-service
                port:
                  number: 8080
